[package]
name = "vision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_env = "0.1.2"
dotenv = "0.15.0"
kucoin_rs = { git = "https://github.com/bobdebuildr/kucoin_rs.git", branch = "rm_failure" }
serde = "1.0.150"
thiserror = "1.0.37"
